service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-proxy
  labels:
    app: zabbix-proxy
    service: zabbix-proxy
  
spec:
  selector:
    app: zabbix-proxy
  ports:
    - name: http
      port: 80
      targetPort: APP_PORT
      protocol: TCP
  type: NodePort
